...
    android:layout_height="match_parent"
    tools:context=".views.ArtistDetailActivity"
    android:background="@color/background"
    >

    <RelativeLayout
        android:id="@+id/principal"
        android:layout_width="408dp"
        android:layout_height="259dp"
        android:background="@color/black"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">
...
        <Space
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_artist" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spacer"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="21sp"
...
            android:layout_marginStart="15dp"
            android:text="@string/birthday"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/artistName"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            android:textSize="21sp"
...
