<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".views.ArtistsActivity">

    <include android:id="@+id/toolbar" layout="@layout/toolbar" />
    <include layout="@layout/app_image" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="130dp"
        android:id="@+id/rvArtists"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>