<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".views.CreateAlbumActivity">
    <include android:id="@+id/toolbar" layout="@layout/toolbar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_album_title"
                android:textAlignment="center"
                android:textColor="@color/primary_color"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.022" />

            <TextView
                android:id="@+id/tvSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/create_album_subtitle"
                android:textColor="@color/grey_contrast"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="72dp" />

            <TextView
                android:id="@+id/tvErrors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text=""
                android:textColor="@color/red_error"
                android:textSize="16dp" />

            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/tvName"
                android:textColor="@color/primary_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/nombre_del_lbum" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="394dp"
                android:layout_height="56dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/nombre_del_album"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                app:backgroundTint="@color/secondary_purple" />


            <TextView
                android:id="@+id/tvCover"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/cover_url" />

            <EditText
                android:id="@+id/etCover"
                android:layout_width="394dp"
                android:layout_height="56dp"
                android:ems="10"
                android:layout_marginRight="10dp"
                android:hint="url de la imagen"
                android:layout_marginLeft="10dp"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                app:backgroundTint="@color/secondary_purple"
                android:layout_marginBottom="20dp"
                />

            <TextView
                android:id="@+id/tvGenre"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/genre" />

            <Spinner
                android:id="@+id/genre_spinner"
                android:layout_width="394dp"
                android:layout_height="56dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white"
                app:backgroundTint="@color/secondary_purple"
                android:layout_marginBottom="20dp"
                />

            <TextView
                android:id="@+id/tvRecordLabel"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/record_label" />

            <Spinner
                android:id="@+id/record_label_spinner"
                android:layout_width="394dp"
                android:layout_height="56dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white"
                app:backgroundTint="@color/secondary_purple"
                android:layout_marginBottom="20dp"
                />

            <TextView
                android:id="@+id/tvReleaseDate"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/release_date" />

            <Button
                android:id="@+id/datePickerButton"
                style="?android:spinnerStyle"
                android:layout_width="394dp"
                android:layout_height="56dp"
                android:gravity="center"
                android:text="JAN 01 2020"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvDescription"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/descripcion" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="394dp"
                android:layout_height="56dp"
                android:hint="Agrege una descripcion"
                android:ems="10"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="start|top"
                android:textColor="@color/white"
                app:backgroundTint="@color/secondary_purple"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/guardar" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>