...
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/collector_menu_text" />
            <Button
                android:id="@+id/btn_create_album"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
...
